force-app/main/default/objects/Sales_Survey_Contact__c/Sales_Survey_Contact__c.object-meta.xml
<CustomObject>
    <description>THis is to save contacts we added while creating sales survey</description>
    <label>Sales Survey Contact</label>
    <nameField>
        <displayFormat>SSContact-{000}</displayFormat>
        <label>Sales Survey Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Survey Contact</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>