force-app/main/default/objects/Sales_Survey_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Survey Contact</relationshipLabel>
    <relationshipName>Sales_Survey_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>